syntax = "proto3";

option go_package = "./;auth";
package auth;

message SendCodeReq {
  string Phone = 1;
}

message IsRegistered {
  bool IsRegistered = 1;
}

message UserData {
	uint64 Id = 1;
	string Name = 2;
	string Phone = 3;
	string Email = 4;
	string Avatar = 5;
}

message LoginReq  {
	string Phone = 1;
	string Code = 2;
}

message LoginResp {
	uint64 Id = 1;
	string Name = 2;
	string Phone = 3;
	string Email = 4;
	string Avatar = 5;
	string Address = 6;
}

message RegisterReq  {
	string Phone = 1;
	string Code = 2;
	string Name = 3;
	string Email = 4;
}

service AuthService {
  rpc SendCode(SendCodeReq) returns (IsRegistered) {}
  rpc Login(LoginReq) returns (LoginResp) {}
  rpc Register(RegisterReq) returns (UserData) {}
}